<resources>
    <string name="exp_dir">/sdcard/XinkVpn</string>
    <string name="pref_crash_report_enabled_key">acra.enable</string>
    <string name="pref_crash_conn_broken_key">xink.vpn.pref.crash_conn_broken</string>
    <string name="pref_crash_conn_broken_threshold_key">xink.vpn.pref.crash_conn_broken_threshold</string>
    <string name="active_vpn_state_key">xink.vpn.data.active_vpn_state</string>
    <string name="active_vpn_state_default">IDLE</string>
    <string name="crypto_raw_key">es3rsadfhuN1s8Bk</string>
    <string name="appCenter">App Center</string>
    <string name="app_inner">In-house</string>
    <string name="app_common">Public</string>
    <string name="app_update">Update</string>
    <string name="app_mine">My Apps</string>
    <string name="all_app">All Apps</string>
    <string name="search_hint">Please input keyword</string>
    <string name="search_label">Search</string>
    <string name="installed_apps">Apps Installed</string>
    <string name="not_installed_apps">Apps Not Installed</string>
    <string name="install_all">Install All</string>
    <string name="update_all">Update All</string>
    <string name="app_loading">Loading...</string>
    <string name="app_btn_open">Open</string>
    <string name="app_btn_install">Install</string>
    <string name="app_btn_update">Update</string>
    <string name="app_btn_installing">Installing...</string>
    <string name="app_btn_updating">Updating...</string>
    <string name="app_btn_none">Unknown</string>
    <string name="app_load_error1">Failed to load app info!</string>
    <string name="app_load_error2">Faile to load app info：</string>
    <string name="app_sync_install_net_error">Network error while synchronizing app installation status！</string>
    <string name="app_sync_install_error2">Synchronizing app installation status Error!</string>
    <string name="app_sync_uninstall_net_error">NEtwork error while synchronizing app uninstallation status！</string>
    <string name="app_sync_uninstall_error2">Synchronizing app uninstallation status error：</string>
    <string name="app_open_error">Failed to open app!</string>
    <string name="app_download_finish_notify_ticker">Download finished</string>
    <string name="app_download_finish_notify_title">Download finished</string>
    <string name="app_download_finish_notify_content">Download finished. Click to install</string>
    <string name="app_download_error1">Failed to downlaod apps!</string>
    <string name="app_download_error2">下Failed to downlaod apps：</string>
    <string name="app_uninstall_failed">App not uninstalled yet!</string>
    <string name="app_btn_desc_more">More...</string>
    <string name="app_btn_desc_close">Less...</string>
    <string name="app_progress_waiting">Waiting...</string>
    <string name="app_install_error">App install error.</string>
    <string name="app_uninstall_error">App uninstall error.</string>
    <string name="app_network_error">Network error, please try again!</string>
    <string name="app_return_val_error2">Returned value error:</string>
    <string name="app_btn_install_all">Install all</string>
    <string name="app_btn_stop_install">Stop installation</string>
    <string name="app_start_download">Start to download</string>
    <string name="app_loading_install_title">Loading...</string>
    <string name="app_loading_install_context">Loading...</string>
    <string name="app_list_footer_loaded_finish">Finished</string>
    <string name="app_list_footer_none_data">No data</string>
    <string name="app_list_footer_loading">Loading...</string>
    <string name="app_list_footer_load_error">Failed to load data, please try again.</string>
    <string name="app_btn_update_all">Update all</string>
    <string name="app_btn_stop_update">Stop update</string>
    <string name="app_start_update">Start update</string>
    <string name="app_can_update">Can be updated</string>
    <string name="app_loading_update_title">Load more data</string>
    <string name="app_loading_update_context">Loading updated data...</string>
    <string name="app_loading_category_title">Load app category</string>
    <string name="app_loading_category_context">Loading app category...</string>
    <string name="app_loading_data">Loading data...</string>
    <string name="app_btn_uninstall">Uninstall</string>
    <string name="app_btn_cancel">Cancel</string>
    <string name="app_function_intro">Description</string>
    <string name="app_sys_requirement">System Requirement</string>
    <string name="app_pulldown_to_refresh">Pull down to refresh</string>
    <string name="app_release_to_refresh">Release to refresh</string>
    <string name="app_pulldown_refreshing">Refreshing...</string>
    <string name="app_last_update">Last upate</string>
    <string name="app_net_not_available">No network available</string>
    <string name="app_btn_retry">Retry</string>
    <string name="app_detail_retry">Failed to load app info, please try again.</string>
    <string name="app_inner_empty">No apps. Click to refresh.</string>
    <string name="app_public_empty">No apps. Click to refresh.</string>
    <string name="app_update_empty">No apps to update.</string>
    <string name="app_to_install_empty">No apps needing to install</string>
    <string name="app_installed_empty">No apps installed</string>
    <string name="app_search_result_empty">No data. Click to refresh.</string>
    <string name="app_newadd">New</string>
    <string name="app_service_name">File download service</string>
    <string name="startForeground">startForeground</string>
    <string name="app_name">NQSky</string>
    <string name="app_title">NQSky Mobility Management</string>
    <string name="client_os">Android %1$s</string>
    <string name="send_receiver_success">Send Successfully</string>
    <string name="active">Enroll</string>
    <string name="clound_scan">clound_scan</string>
    <string name="start_copyright">Copyright© 2010–2012 NQSKY</string>
    <string name="start_copyright_2">All Rights Reserved.</string>
    <string name="tip">MDM Tips</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_ok">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_back">Back</string>
    <string name="bnt_i_know">OK</string>
    <string name="bnt_setting">Settings</string>
    <string name="btn_setting_net">Network Setting</string>
    <string name="btn_back_en">Back</string>
    <string name="btn_retry">Retry</string>
    <string name="dialog_title_tip">Tips</string>
    <string name="connect_fail">Network connection failed. Please check your phone connection settings!</string>
    <string name="sevice_ip">Server</string>
    <string name="user_name">User</string>
    <string name="user_password">Passwd</string>
    <string name="guard_password">Anti-theft password</string>
    <string name="user_level">Grade</string>
    <string name="service_ip_hint">Server IP or domain</string>
    <string name="service_ip_delimiter">:</string>
    <string name="service_port_hint">443</string>
    <string name="service_ip_reachable">Server IP address incorrect or server cannot be accessed.</string>
    <string name="user_name_hint">User name</string>
    <string name="user_password_hint">Password</string>
    <string name="guard_password_hint">Please input 6–12 bit anti-theft password</string>
    <string name="user_level_hint">Please input user grade</string>
    <string name="register">Enrollment</string>
    <string name="register_tip_guard_password_error">Anti-theft passord unmatched. Please try again.</string>
    <string name="register_tip_password_error">User name and passwrod unmatched!</string>
    <string name="register_tip_init_device_error">Device initialization failed. Please try again.</string>
    <string name="register_tip_init_device_success">Device initialization success</string>
    <string name="register_tip_uid_get_beyond">The devices allowed to be activated is out of limit. Please contact adminstrator.</string>
    <string name="register_tip_error">Activation failed. Please try again or contact administrator.</string>
    <string name="update_user_tip_error">Switch user failed. Please try again.</string>
    <string name="get_uid_tip_suc">Success to get use ID</string>
    <string name="update_user_tip_suc">User update success</string>
    <string name="setting">Settings</string>
    <string name="set_password_upload_tip">Connecting to server…</string>
    <string name="about">About</string>
    <string name="mam_server_url">https://%1$s/iosapp/app</string>
    <string name="user_server_url">https://%1$s/cgi-bin/dynamic_parser.cgi</string>
    <string name="push_server_url">https://%1$s/Pushserver/push/server?</string>
    <string name="update_server_url">https://%1$s/NQClientUpdate/check.do</string>
    <string name="main_tab_device">My Device</string>
    <string name="main_tab_app">App Center</string>
    <string name="main_tab_msg">Msg Center</string>
    <string name="main_tab_setting">Settings</string>
    <string name="mdm_title_device">Device Info</string>
    <string name="mdm_title_location">Location</string>
    <string name="mdm_title_location2">My Location</string>
    <string name="dig_net_setting_title">Network Settings</string>
    <string name="net_setting_tip">Network connection failed!</string>
    <string name="dig_net_title">Network</string>
    <string name="net_tip_error">Network connectiong failed. Please try again.</string>
    <string name="dig_register_error_title">The device cannot be activated.</string>
    <string name="net_tip_service_error">Server connection failed!</string>
    <string name="register_tip_device_no_match_error">Please login self service platorm to registre a device or contact administrator.</string>
    <string name="register_tip_device_root_not_allowed">The device has been ROOT. Please contact administrator!</string>
    <string name="init_device_tip">Device activating…</string>
    <string name="dig_location_error">Failed to load the location info. Please try again.</string>
    <string name="tip_turn_on_location_service">"Please turn on the Google's location service."</string>
    <string name="dig_register_sys_error">服务器系统错误！</string>
    <string name="traffic_info_title">Current month network traffic</string>
    <string name="traffic_info_2G_title">2G/3G</string>
    <string name="traffic_info_wifi_title">WIFI</string>
    <string name="traffic_info_conn">Loading network traffic info…</string>
    <string name="traffic_info_error">Failed to load network traffic info…</string>
    <string name="storage_info_mobile_title">Phone memory</string>
    <string name="storage_info_sd_title">SD card</string>
    <string name="storage_info_ex_sd_title">External SD card</string>
    <string name="storage_info_title">Memory info</string>
    <string name="storage_info">total%1$s，available%2$s</string>
    <string name="storage_info_no_sdcard">No SD card</string>
    <string name="config_info_title">Policy and settings</string>
    <string name="config_info_updat_time">Update time：%1$s</string>
    <string name="config_info_updat_no_time">No policy and settings info</string>
    <string name="camera_info_none">None</string>
    <string name="camera_info_front">Front:</string>
    <string name="camera_info_back">Rear:</string>
    <string name="setting_info_speed_test">测试下载速度</string>
    <string name="remember_pwd">Remember password</string>
    <string name="mdm_about_title">Mobility Management</string>
    <string name="mdm_about_version">Version:</string>
    <string name="mdm_about_build">Build:</string>
    <string name="mdm_about_server">Server:</string>
    <string name="speed_test_request_title">http请求数：</string>
    <string name="speed_test_download_title">网络下载速度：</string>
    <string name="default_server">mdm.ab-insurance.com</string>
</resources>