<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/custom_title" layout="@layout/custom_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_primary" android:layout_gravity="center_vertical" android:id="@id/service_ip_lablel" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="40.0dip" android:text="@string/sevice_ip" android:layout_alignParentTop="true" />
            <EditText android:textColor="@color/text_primary" android:id="@id/service_ip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:text="@string/default_server" android:hint="@string/service_ip_hint" android:singleLine="true" android:layout_toLeftOf="@id/service_ip_delimiter" android:layout_toRightOf="@id/service_ip_lablel" android:layout_alignBaseline="@id/service_ip_lablel" android:inputType="textUri" />
            <EditText android:textColor="@color/text_primary" android:id="@id/service_port" android:layout_width="55.0dip" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:hint="@string/service_port_hint" android:singleLine="true" android:layout_alignBaseline="@id/service_ip_lablel" android:layout_alignParentRight="true" android:inputType="number" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text_primary" android:id="@id/service_ip_delimiter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:text="@string/service_ip_delimiter" android:layout_toLeftOf="@id/service_port" android:layout_alignBaseline="@id/service_ip_lablel" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text_primary" android:id="@id/user_name_label" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/user_name" android:layout_below="@id/service_ip_lablel" android:layout_alignLeft="@id/service_ip_lablel" />
            <EditText android:textColor="@color/text_primary" android:id="@id/user_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:hint="@string/user_name_hint" android:singleLine="true" android:layout_toRightOf="@id/user_name_label" android:layout_alignBaseline="@id/user_name_label" android:inputType="textVisiblePassword" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text_primary" android:id="@id/user_password_label" android:layout_width="65.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/user_password" android:layout_below="@id/user_name_label" android:layout_alignLeft="@id/user_name_label" />
            <EditText android:textColor="@color/text_primary" android:id="@id/user_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:hint="@string/user_password_hint" android:singleLine="true" android:layout_toRightOf="@id/user_password_label" android:layout_alignBaseline="@id/user_password_label" android:inputType="textPassword" />
            <Button android:textColor="@color/button_text_selector_color" android:id="@id/register" android:background="@drawable/mam_app_to_update_btn_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="12.0dip" android:text="@string/register" android:layout_below="@id/user_password_label" android:layout_centerHorizontal="true" style="@style/textsize_20sp" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>