<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/user_name" android:ems="10" android:singleLine="true" android:inputType="textEmailAddress">
        <requestFocus />
    </EditText>
    <EditText android:id="@id/userpwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/user_password" android:ems="10" android:singleLine="true" android:inputType="textPassword" />
    <CheckBox android:id="@id/rememberPwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remember_pwd" />
</LinearLayout>