<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/custom_title" layout="@layout/custom_title" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/about" />
        <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.799988dip" android:text="@string/mdm_about_title" style="@style/about_name" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="31.399994dip">
            <TextView android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mdm_about_version" style="@style/about_other" />
            <TextView android:textColor="#ff666666" android:id="@id/textView_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" style="@style/about_other" />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mdm_about_build" style="@style/about_other" />
            <TextView android:textColor="#ff666666" android:id="@id/textView_build" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" style="@style/about_other" />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mdm_about_server" style="@style/about_other" />
            <TextView android:textColor="#ff666666" android:id="@id/textView_server" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" style="@style/about_other" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>