<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/custom_title" layout="@layout/custom_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="@style/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_title" />
            <LinearLayout android:gravity="center" android:id="@id/traffic_conn" android:background="@drawable/info_btn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <ProgressBar android:id="@id/pb_traffic_info" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textAppearance="@style/title_normal_text" android:id="@id/tv_traffic_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
                <Button android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/btn_retry" android:background="@drawable/btn_nav" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/btn_retry" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@id/traffic_view" android:background="@drawable/info_btn_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="@style/title_normal_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_2G_title" />
                    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                        <TextView android:textAppearance="@style/content_blue_text" android:id="@id/mobile_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                        <TextView android:textAppearance="@style/content_blue_small_text" android:id="@id/mobile_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/mobile_value" android:layout_alignParentTop="true" />
                    </RelativeLayout>
                </LinearLayout>
                <ImageView android:background="@drawable/info_btn_line" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="@style/title_normal_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/traffic_info_wifi_title" />
                    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                        <TextView android:textAppearance="@style/content_blue_text" android:id="@id/wifi_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                        <TextView android:textAppearance="@style/content_blue_small_text" android:id="@id/wifi_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/wifi_value" android:layout_alignParentTop="true" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView android:textAppearance="@style/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/storage_info_mobile_title" />
            <ProgressBar android:id="@id/storage_progress_bar_mobile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:progressDrawable="@drawable/progress_bar" style="?android:attr/progressBarStyleHorizontal" />
            <TextView android:textAppearance="@style/content_text" android:id="@id/storage_info_mobile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
            <TextView android:textAppearance="@style/title_text" android:id="@id/storage_info_sd_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/storage_info_sd_title" />
            <ProgressBar android:id="@id/storage_progress_bar_sd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:progressDrawable="@drawable/progress_bar" style="?android:attr/progressBarStyleHorizontal" />
            <TextView android:textAppearance="@style/content_text" android:id="@id/storage_info_sd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
            <TextView android:textAppearance="@style/title_text" android:id="@id/storage_info_sd_ext_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/storage_info_ex_sd_title" />
            <ProgressBar android:id="@id/storage_progress_bar_ex_sd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:progressDrawable="@drawable/progress_bar" style="?android:attr/progressBarStyleHorizontal" />
            <TextView android:textAppearance="@style/content_text" android:id="@id/storage_info_ex_sd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
            <ImageView android:background="@drawable/main_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="25.0dip" />
            <TextView android:textAppearance="@style/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/config_info_title" />
            <TextView android:textAppearance="@style/content_text" android:id="@id/config_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>