<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/custom_title" layout="@layout/custom_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/title_text" android:id="@id/speed_test_request_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/speed_test_request_title" />
            <TextView android:textAppearance="@style/content_text" android:id="@id/speed_test_request_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/speed_test_request_title" android:layout_alignBaseline="@id/speed_test_request_title" />
            <TextView android:textAppearance="@style/title_text" android:id="@id/speed_test_download_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/speed_test_download_title" android:layout_below="@id/speed_test_request_title" />
            <TextView android:textAppearance="@style/content_text" android:id="@id/speed_test_download_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/speed_test_download_title" android:layout_alignBaseline="@id/speed_test_download_title" />
            <Button android:textColor="@color/button_text_selector_color" android:id="@id/speed_test" android:background="@drawable/mam_app_to_update_btn_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="15.0dip" android:text="@string/setting_info_speed_test" android:layout_below="@id/speed_test_download_title" android:layout_centerHorizontal="true" style="@style/textsize_20sp" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>